--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.02.2022 08:33:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.02.2022 09:12:00</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 17. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Žampionová</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Pečený pstruh na másle a šalvěji s pečeným bramborem a limetkovým dipem</strong>
+<strong>Kuřecí maso s houbovou omáčkou a s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Caesar salát s kuřecím masem a krutony</strong>
+<strong>Smažený sýr s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -173,7 +173,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s pecenymi rajcaty a dresinkem z celozrnne horcice, kuskus s cervenymi fazolemi, salatek {L} 139</li><li>Posirovany filet z uzene bile tresky s holandskou omackou s kaparami, stouchane brambory s porkem, salatek 169</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou a spetkou muskatu, stouchane brambory s porkem, mrkvovy salat s ananasem, citron {L} 169</li><li>Ratatouille z pecene zeleniny s grilovanym halloumi, kuskus s cervenymi fazolem, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s grilovanym citronem a salotkovo-vinnym dresinkem, bramborovy salat s cervenou repou, krenem a majonezou {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s grilovanym citronem a salotkovo-vinnym dresinkem, bramborovy salat s cervenou repou, krenem a majonezou 169</li><li>Smazena zeleninova ryze s hovezim rostbifem a thajskym chilli dzemem, salatek 139</li><li>Bramborove halusky s trhanym uzenym farmarskym kuretem, rukolou a zralou goudou, salatek {L} 165</li><li>Zapeceny zampion portobello plneny brokolici se syrem brie, stouchane brambory s porkem, salatek 139</li></ol>
 </td>
 </tr>
 </table>
