--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.02.2022 09:38:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.02.2022 10:10:44</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -46,6 +46,21 @@
 <li class="poznamka">
 <div class="polozka">Linecký koláč s tvarohem, jablky a mandlovou drobenkou </div>
 <div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Obložený žitný chléb </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brioška - prosciutto</div>
+<div class="cena">45 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
