--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.02.2022 08:33:46</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.02.2022 09:12:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Středa, 23. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová</strong>
+<strong>Vývar s kuřecím masem a brokolicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát se smaženými tvarůžky</strong>
+<strong>Vepřová kotleta zapečená cibulkou, žampiony a parmazánem s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Vepřový španělsky ptáček s rýží</strong>
+<strong>Míchaný salát s pečenými kuřecími křidélky a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -172,7 +172,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, gratinovane brambory, salatek 139</li><li>Chobotnice na recky zpusob {oktopus giganti plaki}  s maslovymi fazolemi v rajcatove omacce se zeleninou a bylinkami, ciabatta, salatek {L} 175</li><li>Malajsky hovezi rendang s kokosovym mlekem, limetkovymi listky a galangalem, jasminova ryze, salatek 139</li><li>Italske dynove rizoto s gorgonzolou a uzenym hovezim flank steakem, salatek 169</li><li>Zapecene lilky v rajcatove omacce plnene cockou s olivami, smazenou cibulkou a goudou, zeleninovy kuskus, salatek {L} 139</li></ol>
+<ol><li>Filet z norskeho slede smazeny v tempura testicku, jasminova ryze, thajsky chilli dzem, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa se salsou z cerstvych rajcaty s kaparami a olivami, stouchane brambory s porkem, salatek z cervene repy s krenem 169</li><li>Grilovany kruti spiz teryiaki, jasminova ryze, cukemono z redkve a mrkve se zazvorem a spetkou chilli 139</li><li>Prsicka z divoke kachny „alla Cacciatora“ {na cervenem vine s paprikami, rajcaty, zampiony, divokym korenim a olivami}, bramborove halusky, salatek {L} 169 </li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
